# inteligencia-artificial-monitoramento

./: README.md  main.py  pyproject.toml
treinamento/: base.csv  modelo_ia.pkl  treinamento.py
